- nav overflow fix

--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -97,6 +97,8 @@
         overflow: hidden;
         @media (min-width: $tabletSize) {
           flex-direction: row;
+          overflow: visible;
+
         }
         li.menu-item {
           background: transparent;
